--- a/src/ReactASPNetMVCDemo/ReactASPNetMVCDemo.csproj
+++ b/src/ReactASPNetMVCDemo/ReactASPNetMVCDemo.csproj
@@ -234,7 +234,10 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\reactdemo\status.bar.jsx" />
+    <Content Include="Scripts\reactdemo\components\clock.jsx" />
+    <Content Include="Scripts\reactdemo\components\weather.jsx" />
+    <Content Include="Scripts\reactdemo\pages\render.contact.form.jsx" />
+    <Content Include="Scripts\reactdemo\components\status.bar.jsx" />
     <Content Include="Scripts\react\react-dom-server.js" />
     <Content Include="Scripts\react\react-dom-server.min.js" />
     <Content Include="Scripts\react\react-dom.js" />
@@ -277,7 +280,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\reactdemo\contact.us.jsx" />
+    <Content Include="Scripts\reactdemo\components\contact.us.jsx" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Web.config">
