--- a/src/ReactASPNetMVCDemo/ReactASPNetMVCDemo.csproj
+++ b/src/ReactASPNetMVCDemo/ReactASPNetMVCDemo.csproj
@@ -255,6 +255,7 @@
     <Content Include="bower_components\react\bower.json" />
     <Content Include="bower_components\react\LICENSE" />
     <Content Include="bower_components\react\PATENTS" />
+    <Content Include="Views\ContactUs\Listing.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
